<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Τμήμα Ηλεκτρονικής</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="fbs">Facebook</string>
    <string name="location">Τοποθεσία σχολής</string>
    <string name="deleteDB">Καθαρισμός Αγαπημένων</string>

    <!-- Settings Strings-->

    <string name="data">Χρήση μόνο με WiFi</string>
    <string name="vibr">Δόνηση ενημέρωσης</string>
    <string name="vibrdesc">Όταν ολοκληρωθεί η λήψη</string>
    <string name="kairos">Τοποθεσία Καιρού</string>

    <string name="Attach">Συνημμένο</string>
    <string name="webz">Προβολή στον Browser</string>
    <string name="shareit">Μοιράσου το</string>

    <string name="webcamspeed">Χρόνος ανανέωσης webcam</string>
    <string name="webcamdesc">Ανάμεσα σε 1000 ~ 5000 ms</string>

    <!-- About Strings-->
    <string name="anakoinoseis">Αν πατηθεί η ανακοίνωση για δύο δευτερόλεπτα θα ανοίξει το πλαίσιο με τις γρήγορες επιλογές. \n Μεσα στην ανακοίνωση με το κουμπί του συνδετήρα εμφανίζονται τα συνημμένα για κατέβασμα.</string>
    <string name="nea">Τα Νέα ανοίγουν σε browser λόγω της μορφής τους που περιέχουν εικόνες και media files.</string>
    <string name="programma">Το πρόγραμμα χρειάζεται τον browser για να κατεβάσει το αρχείο. Αν δεν υπάρχει το αρχείο θα σταματήσει το Activity.</string>
    <string name="Arxeia">Ίδια χρήση με τις Ανακοινώσεις</string>
    <string name="kairoshelp">Τα δεδομένα του καιρού λαμβάνονται από το openweathermap.org που είναι open source.</string>
    <string name="webcam">Ρυθμίστε τον χρόνο ανανέωσης από τις ρυθμίσεις. Η εικόνα αποθηκεύεται στο κινητό χρειάζεται όμως
        επανεκίνηση για να δημιουργήσει το android τον φάκελο. Το data used χρησιμοποιείται για να ξέρετε πόσα δεδομένα χρησιμοποιούνται</string>
    <string name="agapimena">Για να διαγράψετε κάτι από τα αγαπημένα κρατήστε για δύο δευτερόλεπτα πατημένο το αγαπημένο που θέλετε να διαγράψετε.
    Για να διαγραφούν όλα έχει επιλογή στο menu για καθαρισμό όλων.</string>
    <string name="genika">Χρειάζεται api 14 και πάνω γιατί η εφαρμογή χρησιμοποιεί το Jsoup. Για την ανάπτυξη της εφαρμογής χρησιμοποιήθηκε το Android Studio. </string>
    <string name="extra">Δεν είναι δυνατή η φόρτωση περισσότερων ανακοινώσεων και γενικά σελίδων λόγω της κωδικοποίησης που χρησιμοποιεί η σελίδα για τα javascripts. Η εφαρμογή δεν βασίστηκε σε Database αλλά σε Data Mining. Μπορείτε να δείτε τον κώδικα της εφαρμογής στο github.</string>


    <!-- Favorites Menu-->
    <string name="browser">Άνοιγμα με browser</string>


</resources>
